新增手机号注册
